force-app/main/default/objects/ProjectTypeAttributeSetting__c/ProjectTypeAttributeSetting__c.object-meta.xml
<CustomObject>
    <label>Project Type Attribute Setting</label>
    <nameField>
        <displayFormat>PTAS-{0000}</displayFormat>
        <label>Project Type Attribute Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProjectTypeAttributeSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>