force-app/main/default/objects/ProjectTypeAttributeSetting__c/fields/AttributeName__c.field-meta.xml
<CustomField>
    <fullName>AttributeName__c</fullName>
    <formula>ProjectTypeAttribute__r.AttributeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AttributeName</label>
    <type>Text</type>
</CustomField>