force-app/main/default/objects/ProjectTypeAttributeSetting__c/fields/IsReadOnly__c.field-meta.xml
<CustomField>
    <fullName>IsReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>