force-app/main/default/objects/ProjectTypeAttributeSetting__c/fields/ProjectTypeAttribute__c.field-meta.xml
<CustomField>
    <fullName>ProjectTypeAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Type Attribute</label>
    <referenceTo>ProjectTypeAttribute__c</referenceTo>
    <relationshipLabel>ProjectTypeAttributeSettings</relationshipLabel>
    <relationshipName>ProjectTypeAttributeSettings</relationshipName>
    <type>Lookup</type>
</CustomField>